RESOLVED FIXED 244056
Computed regions appear incorrect in fullscreen
https://bugs.webkit.org/show_bug.cgi?id=244056
Summary Computed regions appear incorrect in fullscreen
Mike Wyrzykowski
Reported 2022-08-17 13:58:32 PDT
Computed regions appear incorrect in fullscreen
Attachments
Mike Wyrzykowski
Comment 1 2022-08-17 13:58:52 PDT
Radar WebKit Bug Importer
Comment 2 2022-08-17 13:59:03 PDT
Mike Wyrzykowski
Comment 3 2022-08-17 14:34:32 PDT
EWS
Comment 4 2022-08-25 19:43:51 PDT
Committed 253803@main (c72a5407c8e9): <https://commits.webkit.org/253803@main> Reviewed commits have been landed. Closing PR #3429 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.