Computed regions appear incorrect in fullscreen https://bugs.webkit.org/show_bug.cgi?id=244056 <rdar://97562328>

Reviewed by Tim Nguyen.

When in fullscreen, only allow elements under the fullscreen
element to be non-inert. That effectively disables them
from interaction during fullscreen.

* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjust const):

Canonical link: https://commits.webkit.org/253803@main